--- a/ForLove/bin/ForLove.dll.config
+++ b/ForLove/bin/ForLove.dll.config
@@ -22,8 +22,8 @@
   </appSettings>
   <system.web>
     <authentication mode="None"/>
-    <compilation debug="true" targetFramework="4.5.2"/>
-    <httpRuntime targetFramework="4.5.2"/>
+    <!--<compilation debug="true" targetFramework="4.5.2"/>
+    <httpRuntime targetFramework="4.5.2"/>-->
   </system.web>
   <system.webServer>
     <modules>
